# dig-gene-set-extractors

./: .gitignore  README.md  pyproject.toml
docs/: air_gapped_install.md  atac-seq2geneset.md  atac-seq_methods.tex  atac_reference_bundle.md  calorimetry2geneset.md  calorimetry_methods.tex  calorimetry_reference_bundle.md  cnv2geneset.md  cnv_methods.tex  drug-response2geneset.md  geneset-extractors.md  methods.tex  methylation2geneset.md  methylation_methods.tex  morphology2geneset.md  morphology_methods.tex  morphology_reference_bundle.md  omics2geneset.md  rna-seq-to-geneset.md  rna-seq2geneset.md  rna-seq_methods.tex  rna2geneset.md  rna_methods.tex  scrna_cnmf_workflow.md
logs/: 2026-03-22.md
offline/: wheelhouse_manifest.example.txt
plans/: active_execution_plan.md
schemas/: geneset.provenance.schema.json  provenance_overlay.schema.json
scripts/: bootstrap_build_tools.sh  check_wheelhouse.py  install_offline.sh  make_local_resources_manifest.py  scrna_quick_nmf.py  split_human_atac_reference_bundles.py
tests/: provenance_helpers.py  test_atac_bulk_converter.py  test_atac_bulk_matrix_converter.py  test_atac_sc_10x_converter.py  test_calr_feature_extraction.py  test_calr_ontology_mapper_converter.py  test_calr_prepare_public_workflow.py  test_calr_prepare_reference_bundle_workflow.py  test_calr_profile_query_converter.py  test_chipseq_peak_converter.py  test_cli_smoke.py  test_cnmf_select_k_workflow.py  test_cnv_gene_extractor.py  test_drug_response_screen_converter.py  test_gmt_writer.py  test_gtf_io.py  test_jump_prepare_reference_bundle_workflow.py  test_metadata_validation.py  test_methylation_cpg_diff_converter.py  test_methylation_dmr_converter.py  test_methylation_dmr_regions_converter.py  test_models.py  test_namespace_compat.py  (+21 more)
(+375 files in other folders)
