[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omics2geneset"
version = "0.1.0"
description = "Converters from omics inputs to standardized gene-weight vectors"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "DIG"}]
dependencies = [
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
omics2geneset = "omics2geneset.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
omics2geneset = [
  "schemas/*.json",
  "converters/specs/*.json",
]
