[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geneset-extractors"
version = "0.1.0"
description = "Converters from omics inputs to standardized gene-weight vectors"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "DIG"}]
dependencies = [
  "jsonschema>=4.0",
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
scrna_tools = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
]

[project.scripts]
geneset-extractors = "geneset_extractors.cli:main"
geneset_extractors = "geneset_extractors.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geneset_extractors = [
  "schemas/*.json",
  "extractors/converters/specs/*.json",
  "resources/*.json",
  "resources/*.tsv",
]
